# H15-Hub

./: .gitignore  .impeccable.md  CLAUDE.md  Dockerfile  README.md  config.local.yaml  config.yaml  docker-compose.unraid.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml  wiki.yml
docs/: API-Referenz.md  Adapter.md  Architektur.md  Automations.md  Deployment.md  Entwicklung.md  Home.md  Installation.md  Konfiguration.md  _Footer.md  _Sidebar.md
h15hub/: auth.py  configuration.py  database.py  main.py
h15hub/adapters/: bambuddy.py  base.py  homeassistant.py  labelprinter.py  lasercutter.py  laserprinter.py
h15hub/api/: admin.py  boards.py  bookings.py  devices.py  public.py  ws.py
h15hub/engine/: automation.py  device_registry.py  tarjan.py
h15hub/frontend/static/: base.css
h15hub/frontend/templates/: admin.html  boards.html  bookings.html  device.html  index.html  labeldesigner.html  login.html  setup.html
h15hub/models/: board.py  booking.py  device.py  settings.py  user.py
tests/: test_adapters.py  test_auth_admin.py  test_boards.py  test_bookings.py  test_tarjan.py
unraid/: h15hub.xml
