[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h15hub"
version = "0.1.0"
description = "Lokaler Integrations-Hub für den Hebewerk e.V. Makerspace"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "itsdangerous>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]
printers = [
    "packbits>=0.6",
    "pyipp>=0.14.0",
    "qrcode[pil]>=7.0",
    "cairosvg>=2.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
